--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -3,32 +3,18 @@
     <div class="composed-title">
       <h1 class="text-title">Dashboard</h1>
       <p class="text-description">In here you can customize and control all of your Settings, Alerts and Commands</p>
-      
     </div>
   </nb-card-header>
   <nb-card-body>
     <p>For the best experience, use this on desktop</p>
-    <h2>
-      First steps
-    </h2>
-    <p>
-      Start by <a routerLink="twitch/api">enabling Twitch API connections</a> in order to receive events data from twitch.<br/>
-    </p>
-    <p>
-      Then go to <a routerLink="twitch/alerts">Alerts</a> in order to set your event alerts up.<br/>
-    </p>
-    <p>
-      The <a routerLink="/browsersource/hypetrain">Hype Train</a> functionality works but it's kinda complicated to set-up and the user interface is not intuitive yet...<br/>
-    </p>
-    <p>
-      Check out what the <a routerLink="twitch/chatbot">Chatbot</a> can do for you...
-    </p>
-    
+    <h2>First steps</h2>
+    <p>Start by <a routerLink="twitch/api">enabling Twitch API connections</a> in order to receive events data from twitch.<br /></p>
+    <p>Then go to <a routerLink="twitch/alerts">Alerts</a> in order to set your event alerts up.<br /></p>
+    <p>You can customize the <a routerLink="/browsersource/hypetrain">Hype Train</a> functionality by uplodaing your own tracks nad pictures<br /></p>
+    <p>Check out what the <a routerLink="twitch/chatbot">Chatbot</a> can do for you...</p>
   </nb-card-body>
   <nb-card-footer>
     <h2>Support</h2>
-    <p>
-      Seek help on the <a href="https://discord.gg/uTmEUxGHKC" target="_blank">discord</a> if you need support.
-    </p>
+    <p>Seek help on the <a href="https://discord.gg/uTmEUxGHKC" target="_blank">discord</a> if you need support.</p>
   </nb-card-footer>
 </nb-card>
