--- a/src/app/browsersource/hypetrain/hypetrain.component.scss
+++ b/src/app/browsersource/hypetrain/hypetrain.component.scss
@@ -1,88 +1,4 @@
-@import '../../../themes.scss';
-
-#cover {
-  position: fixed;
-  top: 0;
-  margin: 0;
-  padding: 0;
-  background-color: #222b45;
-}
-
-.settings {
+.viewport-flex {
   display: flex;
-  justify-content: space-between;
-  align-items: stretch;
-  padding: 0.5rem;
-  background-color: #222b45;
-  z-index: 1;
-  min-width: 1920px;
-
-  color: white;
-}
-
-.settings > div {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  width: 33%;
-
-  padding: 1rem 0;
-  border: 1px solid nb-theme(text-hint-color);
-  border-radius: 5px;
-
-  color: nb-theme(text-basic-color);
-
-  > h3 {
-    text-align: center;
-    color: nb-theme(text-hint-color);
-    font-weight: bold;
-  }
-
-  > h3:not(:first-child) {
-    margin-top: 2.5rem;
-  }
-}
-
-.lvl-indicator-container {
-  width: 45%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-}
-.lvl-indicator-container > * {
-  margin: 2px;
-  pointer-events: none;
-}
-
-.table-outer {
-  display: flex;
-  justify-content: space-between;
-  padding: 0 0.5rem;
-
-  .table-inner {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 0.5rem;
-  }
-}
-
-.save-button {
-  margin-top: 2rem;
-}
-
-.message-hint {
-  margin-top: 2rem;
-  margin-bottom: 1rem;
-  color: nb-theme(text-hint-color);
-  text-align: center;
-}
-
-.label {
-  color: nb-theme(text-hint-color);
-  font-size: 0.7rem;
-  font-weight: bold;
+  //position: absolute;
 }
