--- a/src/app/browsersource/hypetrain/hypetrain.component.html
+++ b/src/app/browsersource/hypetrain/hypetrain.component.html
@@ -1,4 +1,8 @@
-<div *ngIf="settings.viewport && settings.hypetrain" class="viewport" [ngStyle]="{ width: +settings.viewport.width + 'px', height: +settings.viewport.height + 'px' }">
+<div
+  *ngIf="settings.viewport && settings.hypetrain"
+  class="viewport-flex"
+  [ngStyle]="{ width: +settings.viewport.width - +settings.viewport.padding * 2 + 'px', height: +settings.viewport.height - +settings.viewport.padding * 2 + 'px' }"
+>
   <div *ngIf="cantPlay" style="color: red; font-weight: bold; position: absolute">IF YOU OPEN THIS ON A BROWSER YOU NEED TO INTERACT WITH THE PAGE BEFORE IT CAN PLAY MEDIA</div>
   <hypetrain-locomotive *ngIf="settings.hypetrain.train.enabled && hypetrain.currentLevel > 0" [user]="{ name: 'streamer', picture: hypetrain.channelPic }"> </hypetrain-locomotive>
 
