--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -10,7 +10,7 @@
     <h2>First steps</h2>
     <p>Start by <a routerLink="twitch/api">enabling Twitch API connections</a> in order to receive events data from twitch.<br /></p>
     <p>Then go to <a routerLink="twitch/alerts">Alerts</a> in order to set your event alerts up.<br /></p>
-    <p>You can customize the <a routerLink="/browsersource/hypetrain">Hype Train</a> functionality by uplodaing your own tracks nad pictures<br /></p>
+    <p>You can customize the <a routerLink="/browsersource/hypetrain">Hype Train</a> functionality by uploading your own tracks and pictures<br /></p>
     <p>Check out what the <a routerLink="twitch/chatbot">Chatbot</a> can do for you...</p>
   </nb-card-body>
   <nb-card-footer>
