--- a/src/app/browsersource/predictions/predictions.component.scss
+++ b/src/app/browsersource/predictions/predictions.component.scss
@@ -8,11 +8,20 @@
   display: flex;
   justify-content: flex-start;
   align-items: flex-end;
+
+  font-family: 'Poppins', 'sans-serif';
+  width: fit-content;
+}
+
+.predictions-title {
+  color: white;
+  font-size: 4rem;
+  white-space: nowrap;
 }
 
 .bar {
   position: relative;
-
+  border-radius: 5px 5px 0 0;
   > .bar-text {
     width: 100%;
     height: 100%;
@@ -24,7 +33,6 @@
     text-orientation: sideways;
     padding-top: 1rem;
 
-    font-family: 'Poppins', 'sans-serif';
     font-weight: bold;
 
     white-space: nowrap;
@@ -51,5 +59,13 @@
     text-orientation: sideways;
     padding-top: 1rem;
     white-space: nowrap;
+  }
+
+  animation: fill 0.7s ease;
+}
+
+@keyframes fill {
+  from {
+    height: var(--old-percentage);
   }
 }
