--- a/src/app/browsersource/elements/elements.component.html
+++ b/src/app/browsersource/elements/elements.component.html
@@ -1,9 +1,9 @@
 <div
-  class="viewport"
+  class="viewport-flex"
   [ngStyle]="{
-    width: viewport.width + 'px',
-    height: viewport.height + 'px',
-    padding: viewport.padding + 'px'
+    width: +settings.viewport.width + 'px',
+    height: +settings.viewport.height + 'px',
+    padding: +settings.viewport.padding + 'px'
   }"
 >
   <ng-container *ngFor="let element of currentElements">
@@ -12,10 +12,10 @@
       [@in]="element.loaded ? element.transitionIN : 'loading'"
       [@out]="element.transitionOUT"
     >
-      <app-video *ngIf="element?.type === 'video'" [element]="element" [viewport]="viewport"></app-video>
-      <app-clip *ngIf="element?.type === 'clip'" [element]="element" [viewport]="viewport"></app-clip>
-      <app-gif *ngIf="element?.type === 'gif'" [element]="element" [viewport]="viewport"></app-gif>
-      <app-image *ngIf="element?.type === 'image'" [element]="element" [viewport]="viewport"></app-image>
+      <app-video *ngIf="element?.type === 'video'" [element]="element" [viewport]="settings.viewport"></app-video>
+      <app-clip *ngIf="element?.type === 'clip'" [element]="element" [viewport]="settings.viewport"></app-clip>
+      <app-gif *ngIf="element?.type === 'gif'" [element]="element" [viewport]="settings.viewport"></app-gif>
+      <app-image *ngIf="element?.type === 'image'" [element]="element" [viewport]="settings.viewport"></app-image>
     </div>
   </ng-container>
 
@@ -29,7 +29,4 @@
   </ng-container>
 
   <div *ngIf="cantPlay" style="color: red; font-weight: bold; position: absolute">IF YOU OPEN THIS ON A BROWSER YOU NEED TO INTERACT WITH THE PAGE BEFORE IT CAN PLAY MEDIA</div>
-
-  <app-hypetrain *ngIf="hypetrain.currentLevel > 0"></app-hypetrain>
-  <app-predictions *ngIf="predictions.currentPrediction"></app-predictions>
 </div>
