--- a/src/app/dashboard/twitch/alerts/alerts.component.scss
+++ b/src/app/dashboard/twitch/alerts/alerts.component.scss
@@ -219,8 +219,13 @@ input {
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    background-color: #200c3675;
+    padding: 0.25rem 0.5rem;
+    border-radius: 0.25rem;
     div {
       white-space: nowrap;
+      text-shadow: 1px 2px 3px black;
     }
   }
 
